fix fixed navbar secondary z-index

--- a/less/availity-navbar.less
+++ b/less/availity-navbar.less
@@ -30,7 +30,7 @@
 }
 
 .navbar-secondary.navbar-fixed-top {
-  z-index: @availity-zindex-secondary;
+  z-index: @availity-zindex-secondary-fixed;
 
   .navbar-collapse {
     max-height: none;
