--- a/less/availity-variables.less
+++ b/less/availity-variables.less
@@ -125,6 +125,8 @@
 
 // should be lower than primary navbar
 @availity-zindex-secondary: (@zindex-navbar - 10);
+@availity-zindex-secondary-fixed: (@zindex-navbar-fixed - 10);
+
 
 //== Navbar
 
